# secure_password_vault

./: .gitignore  AWS_DEPLOYMENT_INFO.txt  CMakeLists.txt  DEMO_CREDENTIALS.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  PROJECT_REPORT.txt  README.md  Status.txt  deploy_aws.ps1  deploy_aws.sh  mock_server.py  test_data_structures.cpp  test_server.py
include/: auth.hpp  btree.hpp  crypto.hpp  storage.hpp
src/: auth.cpp  btree.cpp  crypto.cpp  main.cpp  server.cpp  storage.cpp
web/: app.js  index.html  styles.css
